# athena_motor_driver

./: .gitlab-ci.yml  .pre-commit-config.yaml  README.md  athena_motor.code-workspace
athena_motor_driver/: CMakeLists.txt  README.md  package.xml
athena_motor_driver/config/: params.yaml  params.yml
athena_motor_driver/include/athena_motor_driver/: athena_motor_driver.hpp
athena_motor_driver/include/athena_motor_driver/controllers/: controller_base.h  diff_drive_controller.hpp
athena_motor_driver/launch/: athena_motor_driver_launch.yml
athena_motor_driver/src/: athena_motor_driver.cpp  ceserial.h  crosstalk_lib_serial_wrapper.hpp  message_conversions.hpp
athena_motor_driver/src/controllers/: diff_drive_controller.cpp
athena_motor_firmware/: motor_test.txt  platformio.ini
athena_motor_firmware/data/: velocity_estimation.ipynb
athena_motor_firmware/include/: crc32.h  endian.h  host_comm.h  motor_comm.h  motor_controller.h  motor_msg_A1B1.h  pid_controller.h  position_measurement_filter.hpp  velocity_measurement_filter.hpp
athena_motor_firmware/include/math/: mean_filter.h  ring_buffer.h
athena_motor_firmware/src/: crosstalk_teensy_usb_serial_wrapper.hpp  host_comm.cpp  main.cpp  motor_comm.cpp  motor_controller.cpp  pid_controller.cpp  status_led.h
athena_motor_interface/: CMakeLists.txt  README.md  package.xml
athena_motor_interface/include/athena_motor_interface/: athena_motor_interfaces.h  crosstalk.hpp
athena_motor_interface/msg/: DebugData.msg  FullMotorStatus.msg  MotorStatus.msg  MotorStatusDebugData.msg  PIDDebugData.msg
