<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">

  <name>athena_motor_driver</name>
  <version>0.0.0</version>
  <description>Driver for the athena motors.</description>

  <maintainer email="fabian@sim.tu-darmstadt.de">Stefan Fabian</maintainer>
  <license>MIT</license>
  <author email="fabian@sim.tu-darmstadt.de">Stefan Fabian</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>athena_motor_interface</depend>
  <depend>hector_ros2_utils</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>geometry_msgs</depend>
  <build_depend>libserial-dev</build_depend>
  <exec_depend>libserial</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
